--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "file-type": "^18.2.1",
     "jsonwebtoken": "^8.5.1",
+    "mime-types": "^2.1.35",
     "mongoose": "^6.7.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
