--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "file-type": "^18.2.1",
+    "joi": "^17.8.3",
     "jsonwebtoken": "^8.5.1",
     "mime-types": "^2.1.35",
     "mongoose": "^6.7.3",
