--- a/config/.env
+++ b/config/.env
@@ -1,6 +1,6 @@
 PORT=3000
 saltRounds=4
-NODE_ENV=development
+NODE_ENV=production
 secrit_key=youthWelfare
 MONGODB_URI=mongodb+srv://Mohamed:mo132000@cluster0.8nvmkez.mongodb.net/YouthWelfare
 DOMAIN=localhost:3000
