--- a/config/.env
+++ b/config/.env
@@ -7,3 +7,5 @@ DOMAIN=localhost:3000
 CLOUD_NAME= dw0cormzj
 API_KEY=519439843191225
 API_SECRET=iIeo8WfE90utaVtLp104ADbY7aM
+EMAIL=youthwelfare.thebes@gmail.com
+PASSWORD=fxfrirmjzvqmthfu
