--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "pdf-creator-node": "^2.3.5",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "uuid": "^9.0.0"
   }
 }
