--- a/config/.env
+++ b/config/.env
@@ -3,7 +3,7 @@ saltRounds=4
 NODE_ENV=production
 secrit_key=youthWelfare
 MONGODB_URI=mongodb+srv://Mohamed:mo132000@cluster0.8nvmkez.mongodb.net/YouthWelfare
-DOMAIN=http://localhost:3000
+DOMAIN=https://actitvityv1.onrender.com
 CLOUD_NAME= dw0cormzj
 API_KEY=519439843191225
 API_SECRET=iIeo8WfE90utaVtLp104ADbY7aM
